💄 Fix shifting nav width on mobile

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -42,6 +42,7 @@ body {
   color: var(--sec-color);
   font-size: $font-size-default;
   margin: 0;
+  width: 100%;
 
   @include mq.mq($until: l) {
     height: 100%;
